--- a/tests/2023-11-27-ans.html
+++ b/tests/2023-11-27-ans.html
@@ -205,6 +205,87 @@ mark .md-meta { color: rgb(0, 0, 0); }
 mjx-container { break-inside: avoid; }
 
 
+.CodeMirror { height: auto; }
+.CodeMirror.cm-s-inner { background: inherit; }
+.CodeMirror-scroll { overflow: auto hidden; z-index: 3; }
+.CodeMirror-gutter-filler, .CodeMirror-scrollbar-filler { background-color: rgb(255, 255, 255); }
+.CodeMirror-gutters { border-right: 1px solid rgb(221, 221, 221); background: inherit; white-space: nowrap; }
+.CodeMirror-linenumber { padding: 0px 3px 0px 5px; text-align: right; color: rgb(153, 153, 153); }
+.cm-s-inner .cm-keyword { color: rgb(119, 0, 136); }
+.cm-s-inner .cm-atom, .cm-s-inner.cm-atom { color: rgb(34, 17, 153); }
+.cm-s-inner .cm-number { color: rgb(17, 102, 68); }
+.cm-s-inner .cm-def { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-variable { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-variable-2 { color: rgb(0, 85, 170); }
+.cm-s-inner .cm-variable-3 { color: rgb(0, 136, 85); }
+.cm-s-inner .cm-string { color: rgb(170, 17, 17); }
+.cm-s-inner .cm-property { color: rgb(0, 0, 0); }
+.cm-s-inner .cm-operator { color: rgb(152, 26, 26); }
+.cm-s-inner .cm-comment, .cm-s-inner.cm-comment { color: rgb(170, 85, 0); }
+.cm-s-inner .cm-string-2 { color: rgb(255, 85, 0); }
+.cm-s-inner .cm-meta { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-qualifier { color: rgb(85, 85, 85); }
+.cm-s-inner .cm-builtin { color: rgb(51, 0, 170); }
+.cm-s-inner .cm-bracket { color: rgb(153, 153, 119); }
+.cm-s-inner .cm-tag { color: rgb(17, 119, 0); }
+.cm-s-inner .cm-attribute { color: rgb(0, 0, 204); }
+.cm-s-inner .cm-header, .cm-s-inner.cm-header { color: rgb(0, 0, 255); }
+.cm-s-inner .cm-quote, .cm-s-inner.cm-quote { color: rgb(0, 153, 0); }
+.cm-s-inner .cm-hr, .cm-s-inner.cm-hr { color: rgb(153, 153, 153); }
+.cm-s-inner .cm-link, .cm-s-inner.cm-link { color: rgb(0, 0, 204); }
+.cm-negative { color: rgb(221, 68, 68); }
+.cm-positive { color: rgb(34, 153, 34); }
+.cm-header, .cm-strong { font-weight: 700; }
+.cm-del { text-decoration: line-through; }
+.cm-em { font-style: italic; }
+.cm-link { text-decoration: underline; }
+.cm-error { color: red; }
+.cm-invalidchar { color: red; }
+.cm-constant { color: rgb(38, 139, 210); }
+.cm-defined { color: rgb(181, 137, 0); }
+div.CodeMirror span.CodeMirror-matchingbracket { color: rgb(0, 255, 0); }
+div.CodeMirror span.CodeMirror-nonmatchingbracket { color: rgb(255, 34, 34); }
+.cm-s-inner .CodeMirror-activeline-background { background: inherit; }
+.CodeMirror { position: relative; overflow: hidden; }
+.CodeMirror-scroll { height: 100%; outline: 0px; position: relative; box-sizing: content-box; background: inherit; }
+.CodeMirror-sizer { position: relative; }
+.CodeMirror-gutter-filler, .CodeMirror-hscrollbar, .CodeMirror-scrollbar-filler, .CodeMirror-vscrollbar { position: absolute; z-index: 6; display: none; outline: 0px; }
+.CodeMirror-vscrollbar { right: 0px; top: 0px; overflow: hidden; }
+.CodeMirror-hscrollbar { bottom: 0px; left: 0px; overflow: auto hidden; }
+.CodeMirror-scrollbar-filler { right: 0px; bottom: 0px; }
+.CodeMirror-gutter-filler { left: 0px; bottom: 0px; }
+.CodeMirror-gutters { position: absolute; left: 0px; top: 0px; padding-bottom: 10px; z-index: 3; overflow-y: hidden; }
+.CodeMirror-gutter { white-space: normal; height: 100%; box-sizing: content-box; padding-bottom: 30px; margin-bottom: -32px; display: inline-block; }
+.CodeMirror-gutter-wrapper { position: absolute; z-index: 4; background: 0px 0px !important; border: none !important; }
+.CodeMirror-gutter-background { position: absolute; top: 0px; bottom: 0px; z-index: 4; }
+.CodeMirror-gutter-elt { position: absolute; cursor: default; z-index: 4; }
+.CodeMirror-lines { cursor: text; }
+.CodeMirror pre { border-radius: 0px; border-width: 0px; background: 0px 0px; font-family: inherit; font-size: inherit; margin: 0px; white-space: pre; overflow-wrap: normal; color: inherit; z-index: 2; position: relative; overflow: visible; }
+.CodeMirror-wrap pre { overflow-wrap: break-word; white-space: pre-wrap; word-break: normal; }
+.CodeMirror-code pre { border-right: 30px solid transparent; width: fit-content; }
+.CodeMirror-wrap .CodeMirror-code pre { border-right: none; width: auto; }
+.CodeMirror-linebackground { position: absolute; inset: 0px; z-index: 0; }
+.CodeMirror-linewidget { position: relative; z-index: 2; overflow: auto; }
+.CodeMirror-wrap .CodeMirror-scroll { overflow-x: hidden; }
+.CodeMirror-measure { position: absolute; width: 100%; height: 0px; overflow: hidden; visibility: hidden; }
+.CodeMirror-measure pre { position: static; }
+.CodeMirror div.CodeMirror-cursor { position: absolute; visibility: hidden; border-right: none; width: 0px; }
+.CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+.CodeMirror-focused div.CodeMirror-cursor { visibility: inherit; }
+.cm-searching { background: rgba(255, 255, 0, 0.4); }
+span.cm-underlined { text-decoration: underline; }
+span.cm-strikethrough { text-decoration: line-through; }
+.cm-tw-syntaxerror { color: rgb(255, 255, 255); background-color: rgb(153, 0, 0); }
+.cm-tw-deleted { text-decoration: line-through; }
+.cm-tw-header5 { font-weight: 700; }
+.cm-tw-listitem:first-child { padding-left: 10px; }
+.cm-tw-box { border-style: solid; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-color: inherit; border-top-width: 0px !important; }
+.cm-tw-underline { text-decoration: underline; }
+@media print {
+  .CodeMirror div.CodeMirror-cursor { visibility: hidden; }
+}
+
+
 :root {
     --side-bar-bg-color: #fafafa;
     --control-text-color: #777;
@@ -591,9 +672,10 @@ header, .context-menu, .megamenu-content, footer{
 
 
 
-</style><title>README</title>
+</style><title>2023-11-27-ans</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='al'><span>AL</span></h1><p>&nbsp;</p><p><a href='./LICENSE'><img src="https://img.shields.io/badge/license-MIT-blue.svg" referrerpolicy="no-referrer"></a></p><p><span>可能在学习中有许多的困难，慢慢走过去就好啦！</span></p><p><span>这个</span></p><p><strong><span>重要的事情！！！</span></strong></p><ul><li><p><span>更新不及时的话嘞，可以在</span><a href='https://github.com/ZhuchenZhong/learning-sharing/issues'><em><span>这里踢一下</span></em></a></p></li><li><p><span>如果有哪些部分的 </span><em><span>疑问</span></em><span> or 有一些问题但还没有更新到的可以在</span><a href='https://github.com/ZhuchenZhong/learning-sharing/issues'><em><span>这里提交~</span></em></a></p></li><li><p><span>这里的大部分内容是</span><strong><span>不会手把手一摸一样告诉大家的</span></strong><span>，写程序嘛，学习电脑知识是要学会自己探索的！</span></p><p><span>比如遇到了困难，遇到了</span><strong><span>bug</span></strong><span>，遇到了不知道什么情况的困难，最最可靠的还是看这篇笔记的你  (后面会讨论一下遇到了这些情况我们应该怎么去自己解决~)</span></p></li></ul><p>&nbsp;</p><hr /><h2 id='目录'><span>目录</span></h2><p>&nbsp;</p><p><a href='#前言'><span>前言</span></a></p><p><span>	</span><a href='#一些会遇到的词'><span>一些词语</span></a></p><p><span>	</span><a href='#一些小工具'><span>一些工具</span></a></p><p><span>	</span><a href='#一些准备'><span>一些准备</span></a></p><p><a href='./base/index.html'><span>一些基本操作</span></a></p><p><a href='./Python/index.html'><span>Python</span></a></p><p><a href='./tests/index.html'><span>一点点题</span></a></p><p>&nbsp;</p><p><em><span>以后补</span></em></p><hr /><h2 id='前言'><span>前言</span></h2><p>&nbsp;</p><p><span>学程序不仅仅学学怎么写程序，还有其他的内容</span></p><p><span>例如怎么用一些比较简单的命令行，写一些简单的脚本</span></p><p><span>还有环境变量呀，还有一些基本工具和一些常见问题的解决方案</span></p><p>&nbsp;</p><p><span>那现在呢目前的规划是</span></p><ul><li><p><span>一些基本的小知识</span></p></li><li><p><span>一些命令行/工具的基本使用方法</span></p></li><li><p><span>Python的一些心得</span></p><ul><li><p><span>基础</span></p></li><li><p><span>网络通讯</span></p></li><li><p><span>一些更厉害的一些姿势</span></p><ul><li><p><span>多线程(其实是微线程，</span><em><span>以后讲</span></em><span>)&amp;多进程</span></p></li><li><p><span>CAPI</span></p></li><li><p><span>其他等等</span></p></li></ul></li><li><p><span>第三方库</span></p></li></ul></li></ul><p><span>然后就是更厉害的啦</span></p><ul><li><p><span>Python算法初步</span></p></li></ul><p><span>当然肯定不止仅有Python，还有C/C++</span></p><p><span>其他的暂时还没有，慢慢来先</span></p><p>&nbsp;</p><p><span>不过看到网上好多人很厉害的样子，我也想学那样炫酷的操作</span></p><p><span>这个放在后头一点，看完了基本操作，我们可以试着在计算机的世界里，看看不一样的风景</span></p><ul><li><p><span>虚拟机</span></p></li><li><p><span>双系统</span></p></li><li><p><span>一些拿来</span><del><span>装的</span></del><span>工具</span></p></li><li><p><span>还有怎么开始尝试自己写一个大一点的软件</span></p></li></ul><p>&nbsp;</p><p><span>接着呢，我们即将要推开计算机的大门，在大门外面，有两个大大的图案</span></p><p><img src="./resources/intro-gate.png" referrerpolicy="no-referrer" alt="image-20231118223511229"></p><p><span>可能已经发现了这是两个操作系统，一个是 Windows，一个是Linux</span></p><p><span>是的你已经发现啦，这把我的苹果，也就是MacOS。其实我并没有省略掉它，所以让我们现在来认识一下这些系统</span></p><ul><li><p><span>Windows</span></p><p><span>这个大家都很熟悉，就是市场占有率最最最高的系统，这个就不做多介绍了</span></p></li><li><p><span>UNIX &amp; Linux</span></p><p><span>这个并不在计算机的大门上，可是我还是写在这里了，如果时光倒退，Linux现在的位置其实是这个系统的，也就是UNIX</span></p><p><span>可是为什么它现在落寞了呢(bushi) 这就要简单的介绍一下Linux的由来</span></p><p><span>上个世纪呢，苹果，微软，UNIX三家独大，他们有一个共同特性，就是 </span><strong><span>要钱</span></strong><span>！！！</span></p><p><span>那LInux这个人呢，就不干了，手撸了一个系统，取名为Linux，是的，这就是Linux操作系统的由来</span></p><p><span>那么，苹果电脑的MacOS呢，就是基于UNIX开发的，所以它算是UNIX的一个衍生版</span></p><p>&nbsp;</p><p><span>那现在Linux和UNIX是</span><strong><span>什么关系嘞</span></strong></p><p><span>从某种角度来说，UNIX就是Linux(说的不对但不要骂我)</span></p><p><span>(这一部分以后还会讲到)</span></p></li></ul><p>&nbsp;</p><p><span>PS:</span></p><p><span>	</span><span>那可能有人会问</span><code>我还听过一下操作系统，Ubuntu, Kali等，他们算什么？</code></p><p><span>	</span><span>他们都是Ubuntu的</span><strong><span>衍生版</span></strong><span>，何为衍生版，可以理解为孩子和父母的关系</span></p><p><span>	</span><span>诚然Linux是一个操作系统，不过单一个Linux和Windows比较还是有一点简陋，</span></p><p><span>	</span><span>比如没有图形化的界面，只能对着黑乎乎的窗口，那衍生版，就是给Linux穿上好看</span></p><p><span>	</span><span>的衣服，让它的一些功能能让我们更直观简便的利用，这就是衍生版主要的作用。</span></p><p><span>	</span></p><p><em><span>以后补</span></em></p><hr /><h3 id='一些会遇到的词'><span>一些会遇到的词</span></h3><p>&nbsp;</p><p><span>会</span><strong><span>慢慢慢慢</span></strong><span>的更新，因为有好多好多词语可能会遇到，不过这里这里罗列一些</span></p><p><span>我认为现阶段比较常用的词语</span></p><p>&nbsp;</p><ul><li><p><span>命令行</span></p><p><span>就是一个黑乎乎的窗口</span></p><p><span>可以在里面完成许多和系统有关的命令，and和它的升级版Powershell(以后会讲)</span></p><p><img src="./resources/intro-console_pic.png" referrerpolicy="no-referrer" alt="image-20231118223511229"></p><p>&nbsp;</p></li><li><p><span>包管理器</span></p><p><span>我们知道我们手机上下载软件，可以应用商店，可以去网络上下载。而在电脑上下载软件，不同的系统也有对应的软件商城或者直接去网络上下载。去网络上下载，有的软件十分的方便，有的软件找来找去都找不到正版或者是官网。</span></p><p><span>那么，</span><strong><span>包管理器</span></strong><span>，闪亮登场，</span><code>包</code><span>可以理解为软件的意思。这个包管理器，就是提供了一个类似于应用商城的功能。下载/更新/卸载软件更方便啦！</span></p></li></ul><p>&nbsp;</p><ul><li><p><span>源 &amp; 镜像</span></p><p><span>可以想象成</span><strong><span>不能外借</span></strong><span>的图书馆，这个图书馆虽然不能外借，但是我们可以一张一张的记下来。</span></p><p><span>当我们需要某本书的时候就从这个</span><strong><span>源</span></strong><code>拉取</code><span>，也就是拍照的过程。但是呢我们会发现，有的时候这个图书馆离我们比较远，</span></p><p><span>可能它在大洋彼岸，我们在中国，那我们跑过去跑回来就特别特别慢了。此刻，让我们就以崇高的敬意，感谢国内的</span></p><p><strong><span>各大镜像源提供商</span></strong><span>。顾名思义，就是一个魔镜，它在国内，通过它我们可以更快的获取我们需要的东西。</span></p><p><span>那其实呢，是这些提供商，已经帮我们把这些所谓书都抄了一遍，所以就会快许多</span></p><p><span>那么下面罗列几个国内的部分镜像网站(</span><del><span>首推清华</span></del><span>)</span></p><ul><li><p><a href='https://mirrors.tuna.tsinghua.edu.cn/'><span>清华大学开源软件镜像站</span></a></p></li><li><p><a href='https://developer.aliyun.com/mirror/'><span>阿里巴巴开源镜像站</span></a></p></li><li><p><a href='https://mirrors.163.com/'><span>网易开源镜像站</span></a></p></li><li><p><a href='https://mirrors.tencent.com/'><span>腾讯软件源</span></a></p></li><li><p><a href='https://mirrors.huaweicloud.com/home'><span>华为云</span></a></p></li></ul><p>&nbsp;</p></li></ul><p>&nbsp;</p><p><em><span>以后补</span></em></p><hr /><h3 id='一些小工具'><span>一些小工具</span></h3><p>&nbsp;</p><ul><li><p><a href='https://chocolatey.org/'><span>Chocolatey</span></a></p></li></ul><p><span>这个是一个Window下的包管理器</span></p><p>&nbsp;</p><p>&nbsp;</p><p><em><span>以后补</span></em></p><hr /><h3 id='一些准备'><span>一些准备</span></h3><p>&nbsp;</p><p><strong><span>磨刀不误砍柴工</span></strong></p><p><span>所以一个优雅且好用的工具很重要，这里仅仅做一些介绍，具体的详细内容嘞放在</span><a href='./base/index.html'><span>一些基本操作</span></a><span>啦</span></p><p><img src="./resources/intro-elegance.jpg" referrerpolicy="no-referrer" alt="python-intro-elegance"></p><p>&nbsp;</p><p><em><span>以后补</span></em></p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='ans-2023-11-27'><span>Ans 2023-11-27</span></h1><p>&nbsp;</p><h4 id='1'><span>1.</span></h4><h6 id='python'><span>Python</span></h6><pre class="md-fences md-end-block ty-contain-cm modeLoaded" spellcheck="false" lang="python"><div class="CodeMirror cm-s-inner cm-s-null-scroll CodeMirror-wrap" lang="python"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 9.51562px; left: 8.00003px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"></textarea></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: 0px; border-right-width: 0px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines" role="presentation"><div role="presentation" style="position: relative; outline: none;"><div class="CodeMirror-measure"><pre><span>xxxxxxxxxx</span></pre></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-code" role="presentation" style=""><div class="CodeMirror-activeline" style="position: relative;"><div class="CodeMirror-activeline-background CodeMirror-linebackground"></div><div class="CodeMirror-gutter-background CodeMirror-activeline-gutter" style="left: 0px; width: 0px;"></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">filepath</span> <span class="cm-operator">=</span> <span class="cm-builtin">input</span>()</span></pre></div><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">path</span> <span class="cm-operator">=</span> <span class="cm-string">'\\'</span>.<span class="cm-property">join</span>(<span class="cm-variable">filepath</span>.<span class="cm-property">split</span>(<span class="cm-string">'\\'</span>)[:<span class="cm-operator">-</span><span class="cm-number">1</span>])</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">filename</span> <span class="cm-operator">=</span> <span class="cm-string">''</span>.<span class="cm-property">join</span>(<span class="cm-variable">filepath</span>.<span class="cm-property">split</span>(<span class="cm-string">'\\'</span>)[<span class="cm-operator">-</span><span class="cm-number">1</span>].<span class="cm-property">split</span>(<span class="cm-string">'.'</span>)[:<span class="cm-operator">-</span><span class="cm-number">1</span>])</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-variable">file_ext</span> <span class="cm-operator">=</span> <span class="cm-variable">filepath</span>.<span class="cm-property">split</span>(<span class="cm-string">'\\'</span>)[<span class="cm-operator">-</span><span class="cm-number">1</span>].<span class="cm-property">split</span>(<span class="cm-string">'.'</span>)[<span class="cm-operator">-</span><span class="cm-number">1</span>]</span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span cm-text="" cm-zwsp="">
+</span></span></pre><pre class=" CodeMirror-line " role="presentation"><span role="presentation" style="padding-right: 0.1px;"><span class="cm-builtin">print</span>(<span class="cm-variable">path</span>, <span class="cm-variable">filename</span>, <span class="cm-variable">file_ext</span>, <span class="cm-variable">sep</span><span class="cm-operator">=</span><span class="cm-string">'\n'</span>)</span></pre></div></div></div></div></div><div style="position: absolute; height: 0px; width: 1px; border-bottom: 0px solid transparent; top: 138px;"></div><div class="CodeMirror-gutters" style="display: none; height: 138px;"></div></div></div></pre><p>&nbsp;</p></div></div>
 </body>
 </html>
